force-app/main/default/objects/sumoapp__Resource__c/sumoapp__Resource__c.object-meta.xml
<CustomObject>
    <label>SUMO Resource</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>