force-app/main/default/objects/sumoapp__Resource__c/fields/sumoapp__Capacity__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Capacity__c</fullName>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>