force-app/main/default/objects/sumoapp__Resource__c/fields/sumoapp__Description__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>