force-app/main/default/objects/sumoapp__Resource__c/fields/sumoapp__FullLocationDescription__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FullLocationDescription__c</fullName>
    <formula>IF(ISBLANK(sumoapp__Location__r.Name), &apos;&apos;, sumoapp__Location__r.Name + &apos;, &apos;) +
        IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__r.Name), &apos;&apos;, sumoapp__Location__r.sumoapp__Area__r.Name + &apos;, &apos;) + 
        IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__r.sumoapp__ParentArea__r.Name), &apos;&apos;, sumoapp__Location__r.sumoapp__Area__r.sumoapp__ParentArea__r.Name + &apos;&apos;)</formula>
    <label>FullLocationDescription</label>
    <type>Text</type>
</CustomField>