force-app/main/default/objects/sumoapp__Resource__c/fields/sumoapp__FullResourceDescription__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FullResourceDescription__c</fullName>
    <formula>IF(NOT(ISBLANK(RecordTypeId)),RecordType.Name,&apos;&apos;)
+ IF(OR(NOT(ISBLANK(sumoapp__Location__r.sumoapp__Area__c)),NOT(ISBLANK(sumoapp__Location__c))),&apos; • &apos;, &apos;&apos;)
+ IF(ISBLANK(sumoapp__Location__r.sumoapp__Area__c),&apos;&apos;,sumoapp__Location__r.sumoapp__Area__r.Name + &apos; - &apos;)
+ IF(ISBLANK(sumoapp__Location__c), &apos;&apos;,sumoapp__Location__r.Name)</formula>
    <label>Full Resource Description</label>
    <type>Text</type>
</CustomField>