force-app/main/default/objects/sumoapp__Resource__c/recordTypes/sumoapp__Laptop.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Laptop</fullName>
    <active>true</active>
    <label>Laptops</label>
</RecordType>