force-app/main/default/objects/sumoapp__Resource__c/recordTypes/sumoapp__Projector.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Projector</fullName>
    <active>true</active>
    <label>Projectors</label>
</RecordType>