force-app/main/default/objects/sumoapp__Resource__c/recordTypes/sumoapp__Room.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Room</fullName>
    <active>true</active>
    <label>Rooms</label>
</RecordType>