force-app/main/default/objects/sumoapp__Resource__c/recordTypes/sumoapp__Tablet.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Tablet</fullName>
    <active>true</active>
    <label>Tablets</label>
</RecordType>