force-app/main/default/objects/sumoapp__Resource__c/validationRules/sumoapp__Location_is_required_for_Rooms.validationRule-meta.xml
<ValidationRule>
    <fullName>sumoapp__Location_is_required_for_Rooms</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Room&apos; &amp;&amp; ISBLANK(sumoapp__Location__c)</errorConditionFormula>
    <errorDisplayField>sumoapp__Location__c</errorDisplayField>
    <errorMessage>Since rooms exist inside locations, you must choose a location for each room.</errorMessage>
</ValidationRule>