force-app/main/default/objects/sumoapp__Resource__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Location__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All SUMO Resources</label>
</ListView>